--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -91,6 +91,14 @@ main {
             &__title {
                 font-size: 2.25em;
             }
+            &__p, &__ul {
+                font-size: 1rem;
+            }
+        }
+        .informacoes {
+          a {
+            font-size: 1rem;
+          }
         }
     }
 }
